build: implement prettier & eslint

--- a/.setup.md
+++ b/.setup.md
@@ -5,5 +5,18 @@
 5. npm run start
 
 ## Engine Locking
+
 - **.nvmrc** - Will tell other uses of the project which version of Node is used
 - **.npmrc** - Will tell other users of the project which package manager is used
+
+## Git Setup
+
+- git add .
+- git commit -m 'project initialization'
+- git remote add origin git@github.com:{YOUR_GITHUB_USERNAME}/{YOUR_REPOSITORY_NAME}.git
+- git push -u origin {YOUR_BRANCH_NAME}
+
+## Code Formatting and Quality Tools
+
+- **eslint** - For best practices on coding standards
+- **prettier** - For automatic formatting of code files
