ci: enable commitlint

--- a/.setup.md
+++ b/.setup.md
@@ -20,3 +20,10 @@
 
 - **eslint** - For best practices on coding standards
 - **prettier** - For automatic formatting of code files
+
+## Git Hooks
+
+- **Husky** - Husky is a tool for running scripts at different stages of the git process, for example add, commit, push, etc.
+  - pre-commit - npm run lint
+  - pre-push - npm run build
+- **Git Commit lint** - We have been following a standard convention for all our commit messages so far, let's ensure that everyone on the team is following them as well
