build: .vscode & debugger

--- a/.setup.md
+++ b/.setup.md
@@ -27,3 +27,11 @@
   - pre-commit - npm run lint
   - pre-push - npm run build
 - **Git Commit lint** - We have been following a standard convention for all our commit messages so far, let's ensure that everyone on the team is following them as well
+
+## VS Code Configuration
+
+- **.vscode/settings.json** - it will tell VS Code to use your Prettier extension as the default formatter (you can override manually if you wish with another one) and to automatically format your files and organize your import statements every time you save.
+
+## Debugging
+
+- **.vscode/launch.json** - that script in place you have three choices for debugging. CLick the little "bug & play icon" on the left of VS Code or press Ctrl + Shift + D to access the debugging menu. You can select which script you want to run and start/stop it with the start/stop buttons.
