build: design system & folder structure

--- a/.setup.md
+++ b/.setup.md
@@ -35,3 +35,29 @@
 ## Debugging
 
 - **.vscode/launch.json** - that script in place you have three choices for debugging. CLick the little "bug & play icon" on the left of VS Code or press Ctrl + Shift + D to access the debugging menu. You can select which script you want to run and start/stop it with the start/stop buttons.
+
+## Directory Structure
+
+This section is now going to cover setting up the folder structure in our project. This is one of those topics that many people will have extremely strong opinions about, and for good reason! Directory structure can really make or break a project in the long term when it gets out of control, especially when fellow team members have to spend unnecessary time trying to guess where to put things (or find things).
+
+## OSS Inspiration
+
+- [Cal.com](https://github.com/calcom/cal.com)
+- [payloadcms.com](https://github.com/payloadcms/payload)
+- [roadmap.sh](https://github.com/kamranahmedse/developer-roadmap)
+
+<!--
+a goooood portfolio that include evevyrthing
+a protpotype and syaing i have already worked on this here ios a demo job posting to see what kind of freelancer and how they apply! and also you can hiure yourself first as weeel
+  -->
+
+https://www.youtube.com/watch?v=Iu5aZDqZt8E
+https://www.youtube.com/watch?v=T-Zv73yZ_QI
+https://www.youtube.com/watch?v=3oooJE3ID_k
+https://www.youtube.com/watch?v=s_Fs4AXsTnA
+https://www.youtube.com/watch?v=cZc4Jn5nK3k&t=33s
+
+cva
+storybook
+design system -
+accesbilty ui - rdaix, healless
